test-cases/final-dump/parametric_repn.wybe
pub type parametric(T) is address {}
